<!--
*
* This file is part of Bsecure. A open source, freely available, SMS encryption app.
* Copyright (C) 2015 Dr Kevin Coogan, Shane Nalezyty, Lucas Burdell
*
* Bsecure is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* Bsecure is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with Bsecure.  If not, see <http://www.gnu.org/licenses/>.
*
-->
<resources>
    <string name="app_name">Bsecure</string>

    <string name="action_new">New</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_nfc">NFC</string>
    <string name="action_settings">Settings</string>
    <string name="action_bugReport">Report A Bug</string>
    <string name="action_about">About</string>

    <string name="title_activity_list_contacts">listContacts</string>
    <string name="title_activity_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_bug_report">BugReport</string>
    <string name="title_activity_nfc">NFC</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_create_message">CreateMessage</string>
    <string name="title_activity_conversation">Conversation</string>

    <string name="message_received_notification_title_template">Message received: %1$s</string>

    <!-- TODO: remove this placeholder text  -->
    <string name="message_received_notification_placeholder_text_template">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="licence">
        Bsecure is a open source, freely available, SMS encryption app.\n
        Copyright © 2015 Dr Kevin Coogan, Shane Nalezyty, Lucas Burdell\n
        \n
        Bsecure is free software: you can redistribute it and/or modify\n
        it under the terms of the GNU General Public License as published by\n
        the Free Software Foundation, either version 3 of the License, or\n
        (at your option) any later version.\n
        \n
        Bsecure is distributed in the hope that it will be useful,\n
        but WITHOUT ANY WARRANTY; without even the implied warranty of\n
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n
        GNU General Public License for more details.\n
        \n
        You should have received a copy of the GNU General Public License\n
        along with Bsecure.  If not, see http://www.gnu.org/licenses/.\n
    </string>
    <string name="noNFCmessage">Unfortunately you\'re device does not support near field
        communication. However we can still perform key exchanges through SMS messaging\n</string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_no_nfc">NoNFC</string>
    <string name="title_activity_blue_tooth">BlueTooth</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="title_activity_bluetooth">Bluetooth</string>

    <string name="text_bluetooth_off">Bluetooth is Off</string>
    <string name="text_bluetooth_on">Bluetooth is On</string>

    <string name="text_view_paired">Paired Devices</string>
    <string name="text_scan_devices">Scan Devices</string>
    <string name="text_stop_scan">Scan Devices</string>

    <string name="text_list_paired_devices">Paired Devices</string>
    <string name="text_list_devices">List of Devices</string>

    <string name="text_pair">Pair</string>

    <string name="text_connect">Connect</string>
    <string name="contact_edit_button">Edit</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_exchange_options">ExchangeOptions</string>
    <string name="sendtext">Send</string>
    <string name="title_activity_exchange">Exchange</string>
    <string name="title_activity_contact_settings">ContactSettings</string>
    <string name="title_activity_new_contact">NewContact</string>

</resources>
